Modified   AdminPortalService/AdminPortalService/AdminPortalService.csproj Modified   AdminPortalService/AdminPortalService/Controllers/v1/TenantAdminController.cs Modified   AdminPortalService/AdminPortalService/Startup.cs Modified   Api.Gateway/Api.Gateway/ocelot.json Modified   UserManagement.Persistence/Model/Tenant.cs Modified   UserManagement.Persistence/Model/UserDetail.cs

--- a/AdminPortalService/AdminPortalService/AdminPortalService.csproj
+++ b/AdminPortalService/AdminPortalService/AdminPortalService.csproj
@@ -5,8 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\TenantService\TenantService.csproj" />
+    <ProjectReference Include="..\..\UserManagement.Persistence\UserManagement.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
