Modified   AdminPortalService/AdminPortalService/Controllers/v1/SupperAdminController.cs Modified   AdminPortalService/AdminPortalService/Controllers/v1/TenantAdminController.cs Modified   AdminPortalService/AdminPortalService/Startup.cs Modified   TenantService/TenantService.csproj Modified   TenantService/UserDetailService.cs

--- a/TenantService/TenantService.csproj
+++ b/TenantService/TenantService.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <ProjectReference Include="..\UserManagement.Persistence\UserManagement.Persistence.csproj" />
