Modified   AdminPortalService/AdminPortalService/AdminPortalService.csproj Modified   AdminPortalService/AdminPortalService/Controllers/v1/SupperAdminController.cs Modified   AdminPortalService/AdminPortalService/Controllers/v1/TenantAdminController.cs Modified   AdminPortalService/AdminPortalService/Startup.cs

--- a/AdminPortalService/AdminPortalService/AdminPortalService.csproj
+++ b/AdminPortalService/AdminPortalService/AdminPortalService.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\TenantService\TenantService.csproj" />
     <ProjectReference Include="..\..\UserManagement.Persistence\UserManagement.Persistence.csproj" />
   </ItemGroup>
