Added      MongoDbClient/DatabaseContext.cs Added      MongoDbClient/MongoDbClient.csproj Added      MongoDbClient/MongoDbQueryRepository.cs Added      MongoDbClient/MongoDbRepository.cs Added      UserManagement.Persistence/Model/UserMessage.cs Added      UserManagement.Persistence/UserMessageRepository.cs Added      UserPortalService/AddRequiredHeaderParameter.cs Added      UserPortalService/Controllers/HomeController.cs Added      UserPortalService/Program.cs Added      UserPortalService/Properties/launchSettings.json Added      UserPortalService/Startup.cs Added      UserPortalService/UserPortalService.csproj Added      UserPortalService/UserPortalService.sln Added      UserPortalService/appsettings.Development.json Added      UserPortalService/appsettings.json Modified   AdminPortalService/AdminPortalService/Controllers/v1/TenantAdminController.cs Modified   TenantService/StartupExtension.cs Modified   UserManagement.Persistence/UserManagement.Persistence.csproj

--- a/UserManagement.Persistence/UserManagement.Persistence.csproj
+++ b/UserManagement.Persistence/UserManagement.Persistence.csproj
@@ -6,7 +6,10 @@
   
  <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
-    <PackageReference Include="MongoDbClient" Version="1.0.0" />
   </ItemGroup>
+  
+ <ItemGroup>
+   <ProjectReference Include="..\MongoDbClient\MongoDbClient.csproj" />
+ </ItemGroup>
 
 </Project>
