--- a/UserPortalService/UserPortalService.csproj
+++ b/UserPortalService/UserPortalService.csproj
@@ -9,7 +9,11 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\TenantService\TenantService.csproj" />
   </ItemGroup>
